# chromium-src-build

./: DEPS  OWNERS.setnoparent  compiled_action.gni  gn_logs.gni  groups  mac_toolchain.py  project.config  protoc_java.py
android/: BUILD.gn  PRESUBMIT.py  android_only_jni_exports.lst  apk_operations.py  fast_local_dev_server.py  generate_wrap_sh.py  test_runner.py
android/gradle/: generate_gradle.py
android/gyp/: apkbuilder.py  apkbuilder.pydeps  compile_java.py  compile_resources.py  dex.py  dex_test.py  errorprone.py  java_cpp_enum.py  java_cpp_enum_tests.py  java_cpp_features.py  java_cpp_strings.py  javac_output_processor.py  lint.py  merge_manifest.py  optimize_resources.py  partition_dex_inputs.py  turbine.py  write_build_config.py
android/gyp/util/: build_utils.py  java_cpp_utils.py  java_cpp_utils_test.py  resource_utils.py
android/java/templates/: BuildConfig.template
android/pylib/constants/: __init__.py
android/pylib/gtest/: gtest_test_instance.py
android/pylib/instrumentation/: instrumentation_test_instance.py
android/pylib/local/device/: local_device_environment.py  local_device_gtest_run.py  local_device_instrumentation_test_run.py  local_device_test_run.py
android/pylib/local/emulator/: avd.py
android/pylib/local/machine/: local_machine_junit_test_run.py
android/pylib/symbols/: stack_symbolizer.py
android/pylib/utils/: device_dependencies.py  device_dependencies_test.py
args/: headless.gn
config/: BUILD.gn  BUILDCONFIG.gn  clippy.toml  rust.gni
config/android/: config.gni  internal_rules.gni  rules.gni  tiered_dex.gni  tiered_dex_partitions.json
config/c++/: c++.gni
config/chromeos/: rules.gni
config/clang/: clang.gni
config/compiler/: BUILD.gn  compiler.gni
config/fuchsia/: fuchsia_package_metadata.gni
config/mac/: BUILD.gn
config/sanitizers/: sanitizers.gni
config/siso/: android.star  blink_all.star  clang_all.star  clang_exception.star  clang_unix.star  clang_windows.star  config.star  cros.star  denylist.star  devtools_frontend.star  linux.star  main.star  rust.star  tsc.star  typescript_all.star
config/win/: BUILD.gn
fuchsia/: gen_build_defs.py  linux_internal.sdk.sha1
fuchsia/starview/: BUILD.gn  README.run_cuttlefish.md  avbtool.py  cvd_avb_testkey_rsa4096.pem  hvc_mock.py  partition_creator.py  run_cuttlefish.py  run_cuttlefish.pydeps  run_cuttlefish_test.py  run_cuttlefish_test.pydeps
fuchsia/test/: common.py  component_storage_test.pydeps  flash_device_unittests.py  isolate_daemon.py  log_manager.py  log_manager_unittests.py  orchestrate.json  orchestrate_runner.py  run_executable_test.py  run_test.py
linux/: dump_app_syms.py
linux/sysroot_scripts/: sysroot_creator.py  sysroots.json
modules/: BUILD.gn
modules/unified/: generate_system_modulemap.py  modulemap_config.py
private_code_test/: private_code_test.gni
rust/: apply_fixes.py
rust/allocator/: allocator_impls.cc  lib.rs
rust/crubit/: BUILD.gn
rust/gni_impl/: clippy_wrapper.py  cpp_api_from_rust.gni  cpp_api_from_rust_wrapper.py  rust_target.gni  rustc_wrapper.py
rust/std/: BUILD.gn.hbs
rust/std/rules/: BUILD.gn
rust/tests/: BUILD.gn
rust/tests/bindgen_cpp_test/: main.rs
rust/tests/bindgen_cpp_test_with_cpp_linkage/: lib.rs
rust/tests/bindgen_static_fns_test/src/: lib.rs
rust/tests/bindgen_test/src/: lib.rs
rust/tests/test_control_flow_guard/: test_control_flow_guard.rs
rust/tests/test_cpp_api_from_rust/: BUILD.gn  unittests.cc
rust/tests/test_rust_shared_library/src/: lib.rs
rust/tests/test_rust_static_library/src/: lib.rs
rust/tests/windows_sys_test/: main.rs
toolchain/: concurrent_links.gni  gcc_toolchain.gni  toolchain.gni
toolchain/apple/: linker_driver.py  toolchain.gni
toolchain/mac/: BUILD.gn
util/: generate_tast_control_cq_tests.py  tast_control.py
