# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/internal_rules.gni")

# Template to assemble tiered dex files.
# This template is used to split the dex files into multiple layers (tiers)
# to bypass the final D8 merge step in local debug builds.
#
# Arguments:
#   apk_template_name: The name of the calling APK template (e.g., target_name).
#   build_config: Path to the build config JSON file.
#   build_config_target: Label of the target that generates the build config.
#   min_sdk_version: The minimum SDK version.
#   java_target_name: The name of the Java target.
#   final_dex_target_name: The name of the final dex target to be defined.
#   final_dex_path: The path where the final dex should be output.
#   custom_assertion_handler: (Optional) Custom assertion handler.
#   proguard_enable_obfuscation: (Optional) Whether to enable proguard obfuscation.
#   repackage_classes: (Optional) Whether to repackage classes.
#
template("tiered_dex_assembly") {
  assert(target_name == invoker.final_dex_target_name,
         "target_name must match final_dex_target_name")

  _apk_template_name = invoker.apk_template_name
  _build_config = invoker.build_config
  _build_config_target = invoker.build_config_target
  _min_sdk_version = invoker.min_sdk_version
  _java_target_name = invoker.java_target_name
  _final_dex_path = invoker.final_dex_path

  _tiered_dex_partitions_file = tiered_dex_partitions_file

  _partition_target_name = "${_apk_template_name}__partition_dex_inputs"
  _partitioned_build_configs_dir =
      "$target_gen_dir/${_apk_template_name}__partitioned"

  _partition_outputs = []
  _rebased_build_config = rebase_path(_build_config, root_build_dir)
  _partition_args = [
    "--dex-files",
    "@FileArg(${_rebased_build_config}:all_dex_files)",
    "--tiered-dex-partitions-file",
    rebase_path(_tiered_dex_partitions_file, root_build_dir),
  ]

  # Construct outputs and arguments for the partitioning script.
  # We need to tell the script where to write the partitioned build config JSON
  # for each partition. This loop populates the list of outputs for GN tracking
  # and the corresponding command-line arguments for the script.
  foreach(_partition, tiered_dex_partitions) {
    _output_file = "$_partitioned_build_configs_dir/${_partition.name}.json"
    _partition_outputs += [ _output_file ]
    _partition_args += [
      "--output",
      "${_partition.name}:" + rebase_path(_output_file, root_build_dir),
    ]
  }

  # Run the partitioning script to split the main build config's all_dex_files
  # into per-partition JSON configs. Do this in a separate step so that dex()
  # is invalidated only when its specific partition inputs change.
  action(_partition_target_name) {
    forward_variables_from(invoker, [ "testonly" ])
    script = "//build/android/gyp/partition_dex_inputs.py"
    inputs = [
      _build_config,
      _tiered_dex_partitions_file,
    ]
    outputs = _partition_outputs
    args = _partition_args
    deps = [ _build_config_target ]
  }

  _partition_dex_deps = [ ":$_partition_target_name" ]
  _partition_dex_outputs = []

  # Dynamically define a standard GN `dex` target for each partition. Each
  # target reads its partitioned build config JSON (generated by the action
  # above) to get its specific inputs, merges them into an intermediate
  # `.dex.jar`, and is independently cached by Siso.
  foreach(_partition, tiered_dex_partitions) {
    _partition_dex_target_name = "${_apk_template_name}__dex_${_partition.name}"
    _partition_dex_deps += [ ":$_partition_dex_target_name" ]
    _partition_dex_output =
        "$target_out_dir/${_apk_template_name}__${_partition.name}.dex.jar"
    _partition_dex_outputs += [ _partition_dex_output ]

    _partition_build_config =
        "$_partitioned_build_configs_dir/${_partition.name}.json"
    _rebased_partition_build_config =
        rebase_path(_partition_build_config, root_build_dir)

    dex(_partition_dex_target_name) {
      forward_variables_from(invoker,
                             [
                               "custom_assertion_handler",
                               "testonly",
                             ])
      min_sdk_version = _min_sdk_version
      proguard_enabled = false
      build_config = _partition_build_config
      output = _partition_dex_output
      input_dex_filearg =
          "@FileArg(${_rebased_partition_build_config}:all_dex_files)"
      enable_desugar = false

      deps = [ ":$_partition_target_name" ]
      data_deps = [ _java_target_name ]
    }
  }

  # The final assembly target. Instead of running D8 to merge all partitions,
  # it runs a python script (via tiered_dex_assembly_step flag in dex.py)
  # that extracts the precompiled .dex files from the partition giants,
  # renames them contiguously (classes.dex, classes2.dex, etc.), and packages
  # them directly into the APK.
  dex(target_name) {
    forward_variables_from(invoker,
                           [
                             "custom_assertion_handler",
                             "proguard_enable_obfuscation",
                             "repackage_classes",
                             "testonly",
                           ])
    min_sdk_version = _min_sdk_version
    proguard_enabled = false
    build_config = _build_config
    output = _final_dex_path

    deps = [ _build_config_target ] + _partition_dex_deps

    input_dex_jars = _partition_dex_outputs
    enable_desugar = false
    tiered_dex_assembly_step = true
  }
}
